--- a/resources/js/src/locales/ru.json
+++ b/resources/js/src/locales/ru.json
@@ -19,5 +19,6 @@
     "starter_kit": "Стартовый комплект",
     "documentation": "Документация",
     "ui_kit": "UI Kit",
-    "more": "Более"
+    "more": "Более",
+    "applications": "Заявки"
 }
