--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -20,5 +20,5 @@
     "documentation": "Documentation",
     "ui_kit": "UI Kit",
     "more": "More",
-    "Заявки": "Applications"
+    "applications": "Applications"
 }
