--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -24,5 +24,6 @@
     "statistics": "Statistics",
     "service_statistics": "Service statistics",
     "KPI": "KPI",
-    "KPI_manager": "Managers' KPIs"
+    "KPI_manager": "Managers' KPIs",
+    "budgets": "Budgets"
 }
