--- a/resources/js/src/locales/ru.json
+++ b/resources/js/src/locales/ru.json
@@ -23,6 +23,7 @@
     "applications": "Заявки",
     "statistics": "Cтатистика",
     "service_statistics": "Cтатистика сервиса",
+    "percent_statistics": "Статистика процента",
     "KPI": "КПЭ",
     "KPI_manager": "КПЭ менеджеров",
     "budgets": "Бюджет"
