--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -21,10 +21,27 @@
     "ui_kit": "UI Kit",
     "more": "More",
     "applications": "Applications",
-    "statistics": "Statistics",
+    "statistic": "Statistics",
     "service_statistics": "Service statistics",
     "percent_statistics": "Percentage statistics",
     "KPI": "KPI",
     "KPI_manager": "Managers' KPIs",
-    "budgets": "Budgets"
+    "budgets": "Budgets",
+    "all_applications": "All applications",
+    "new_application": "New application",
+    "waiting_for_diagnostic_appointment_from_service_station": "Waiting for diagnostic appointment from service station",
+    "diagnostics_prescribed": "Diagnostics prescribed",
+    "yes_is_awaiting_approval_from_the_partner_relations_department": "YES is awaiting approval from the partner relations department",
+    "yes_subject_to_approval_by_the_customer_service_department": "YES, subject to approval by the customer service department",
+    "agreed": "Agreed",
+    "repair_work_is_underway": "Repair work is underway",
+    "repair_completed": "Repair completed",
+    "application_closed": "Application closed",
+    "not_paid": "Not paid",
+    "sign_out": "Sign Out",
+    "orders": "Orders",
+    "client": "client",
+    "state_number": "State number",
+    "car_model": "Car model",
+    "car_mark": "Car's mark"
 }
