--- a/resources/js/src/locales/ru.json
+++ b/resources/js/src/locales/ru.json
@@ -21,11 +21,28 @@
     "ui_kit": "UI Kit",
     "more": "Более",
     "applications": "Заявки",
-    "statistics": "Cтатистика",
+    "statistic": "Cтатистика",
     "service_statistics": "Cтатистика сервиса",
     "percent_statistics": "Статистика процента",
     "KPI": "КПЭ",
     "KPI_manager": "КПЭ менеджеров",
-    "budgets": "Бюджет"
-
+    "budgets": "Бюджет",
+    "all_applications": "Все заявки",
+    "new_application": "Новая заявка",
+    "waiting_for_diagnostic_appointment_from_service_station": "Ожидает назначение диагностики от СТО",
+    "diagnostics_prescribed": "Назначена диагностика",
+    "yes_is_awaiting_approval_from_the_partner_relations_department": "ДА ожидает согласования в отделе по работе с партнерами",
+    "yes_subject_to_approval_by_the_customer_service_department": "ДА на согласовании в отделе по работе с клиентами",
+    "agreed": "Согласован",
+    "repair_work_is_underway": "Проводятся ремонтные работы",
+    "repair_completed": "Ремонт выполнен",
+    "application_closed": "Заявка закрыта",
+    "yes_the_act_was_not_accepted": "ДА акт не принят",
+    "not_paid": "Не оплачено",
+    "sign_out": "Выйти",
+    "orders": "Заявки",
+    "client": "Клиент",
+    "state_number": "Госномер",
+    "car_model": "Модель",
+    "car_mark": "Марка"
 }
