--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -43,5 +43,18 @@
     "client": "client",
     "state_number": "State number",
     "car_model": "Car model",
-    "car_mark": "Car's mark"
+    "car_mark": "Car's mark",
+    "production_year": "Production year",
+    "contract_number": "Contract number",
+    "vehicle_mileage": "Vehicle mileage",
+    "car_condition": "Car condition",
+    "application_creation_date": "Application creation date",
+    "date_of_signing": "Date of signing",
+    "expiration_date": "Expiration date",
+    "application_status": "Application status",
+    "machine_location": "Machine location",
+    "service_type": "Service type",
+    "total_price_for_the_defective_certificate_without_extra_charge": "Total price for the Defective Certificate without extra charge",
+    "the_total_amount_of_the_defective_act": "The total amount of the Defective Act",
+    "phone_station": "Phone station"
 }
