--- a/resources/js/src/locales/kz.json
+++ b/resources/js/src/locales/kz.json
@@ -56,5 +56,6 @@
     "service_ype": "Қызмет түрі",
     "total_price_for_the_defective_certificate_without_extra_charge": "ДА бойынша устемесіз қорытынды баға",
     "the_total_amount_of_the_defective_act": "ДА бойынша қорытынды сома",
-    "phone_station": "СТО нөмірі"
+    "phone_station": "СТО нөмірі",
+    "install_acw": "ОЖА жүктеу"
 }
