--- a/resources/js/src/locales/ru.json
+++ b/resources/js/src/locales/ru.json
@@ -57,5 +57,6 @@
     "service_type": "Тип услуги",
     "total_price_for_the_defective_certificate_without_extra_charge": "Итоговая цена по Дефектному акту без наценки",
     "the_total_amount_of_the_defective_act": "Итоговая сумма по ДА",
-    "phone_station": "Номер телефона СТО"
+    "phone_station": "Номер телефона СТО",
+    "install_acw": "Скачать АВР"
 }
