--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -58,6 +58,7 @@
     "total_price_for_the_defective_certificate_without_extra_charge": "Total price for the Defective Certificate without extra charge",
     "the_total_amount_of_the_defective_act": "The total amount of the Defective Act",
     "phone_station": "Phone station",
-    "install_acw": "Install ACW"
+    "install_acw": "Install ACW",
+    "create_order": "Create order"
 
 }
