--- a/resources/js/src/locales/kz.json
+++ b/resources/js/src/locales/kz.json
@@ -57,5 +57,6 @@
     "total_price_for_the_defective_certificate_without_extra_charge": "ДА бойынша устемесіз қорытынды баға",
     "the_total_amount_of_the_defective_act": "ДА бойынша қорытынды сома",
     "phone_station": "СТО нөмірі",
-    "install_acw": "ОЖА жүктеу"
+    "install_acw": "ОЖА жүктеу",
+    "create_order": "Өтініш жасау"
 }
