--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -59,6 +59,6 @@
     "the_total_amount_of_the_defective_act": "The total amount of the Defective Act",
     "phone_station": "Phone station",
     "install_acw": "Install ACW",
-    "create_order": "Create order"
-
+    "create_order": "Create order",
+    "hello": "Hello"
 }
