--- a/resources/js/src/locales/kz.json
+++ b/resources/js/src/locales/kz.json
@@ -58,5 +58,6 @@
     "the_total_amount_of_the_defective_act": "ДА бойынша қорытынды сома",
     "phone_station": "СТО нөмірі",
     "install_acw": "ОЖА жүктеу",
-    "create_order": "Өтініш жасау"
+    "create_order": "Өтініш жасау",
+    "hello": "Сәлем"
 }
